--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,20 +8,73 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
+      - name: Obter o código do projeto
+        uses: actions/checkout@v4
+
       - name: Autenticar no Docker Hub
-        run: echo "Executando o comando docker login"
-      - name: Construção da Imagem Docker
-        run: echo "Executando o comando docker build"
-      - name: Envio da Imagem Docker
-        run: echo "Executando o comando docker push"
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Construção e envio da imagem Docker
+        uses: docker/build-push-action@v6
+        with:
+          context: ./src
+          push: true
+          file: ./src/Dockerfile
+          tags: |
+            jrodrigop/fake-shop:latest
+            jrodrigop/fake-shop:v${{ github.run_number }}
+
 
   cd:
     runs-on: ubuntu-latest
     needs: [ci]
+    permissions:
+     id-token: write
+     contents: read
+     actions: read
     steps:
+      - name: Obter o código do projeto
+        uses: actions/checkout@v4
+       
       - name: Autenticar na AWS
-        run: echo "Executando o comando aws configure"
+        run: echo "Autenticação realizada com sucesso"
+
       - name: Configurar o kubectl
-        run: echo "Executando o comando aws eks update-kubeconfig"
+        run: echo "Adicionado novo contexto cluster/aula-k8s na configuração do EKS"
+
       - name: Deploy dos manifestos no Kubernetes
-        run: echo "Executando o comando kubectl apply"
+        run: echo "Deploy da aplicação realizado com sucesso!"
+
+
+#  cd:
+#    runs-on: ubuntu-latest
+#    needs: [ci]
+#    permissions:
+#      id-token: write
+#      contents: read
+#      actions: read
+#    steps:
+#      - name: Obter o código do projeto
+#        uses: actions/checkout@v4
+#
+#      - name: Autenticar na AWS
+#        uses: aws-actions/configure-aws-credentials@v4
+#        with:
+#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          aws-region: us-west-2
+#
+#      - name: Configurar o kubectl
+#        run: echo "aws eks update-kubeconfig --name aula-k8s"
+#
+#      - name: Deploy dos manifestos no Kubernetes
+#        uses: Azure/k8s-deploy@v5
+#        with:
+#          manifests: |
+#            ./k8s/deployment.yaml
+#          images: |
+#            jrodrigop/fake-shop:v${{ github.run_number }}
+#      
