--- a/prometheus/deployment.yaml
+++ b/prometheus/deployment.yaml
@@ -709,12 +709,13 @@ spec:
       port: 80
       protocol: TCP
       targetPort: 9090
+      nodePort: 30001
   selector:
     app.kubernetes.io/component: server
     app.kubernetes.io/name: prometheus
     app.kubernetes.io/instance: prometheus
   sessionAffinity: None
-  type: "LoadBalancer"
+  type: "NodePort"
 ---
 # Source: prometheus/charts/prometheus-node-exporter/templates/daemonset.yaml
 apiVersion: apps/v1
@@ -1179,12 +1180,13 @@ metadata:
     app.kubernetes.io/version: "11.3.0"
     app.kubernetes.io/managed-by: Helm
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
     - name: service
       port: 80
       protocol: TCP
       targetPort: 3000
+      nodePort: 30002
   selector:
     app.kubernetes.io/name: grafana
     app.kubernetes.io/instance: grafana
